k8s/2-traffic-management/1-namspace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: traffic-management
  labels:
    istio-injection: enabled # this is necessary coz without this the istio proxy will not work
