k8s/2-traffic-management/6-product-virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: product-virtual-service
  namespace: traffic-management
spec:
  hosts:
    - product.traffic-management.retailvoice.xyz
  gateways:
    - traffic-management/ingressgateway
  http:
    - route:
        - destination:
            host: product-service.traffic-management.svc.cluster.local
            port:
              number: 8000
